--- a/src/app/component/helper/progress-bar/progress-bar.component.html
+++ b/src/app/component/helper/progress-bar/progress-bar.component.html
@@ -1,8 +1,8 @@
 <div class="skill-unit">
-    <h4>{{skillset?.title}}</h4>
+    <h4>{{skillset.title}}</h4>
     <div class="bar">
       <div class="progress" [style.width]="percentage + '%'">
-        <span>{{skillset?.percentage}}</span>
+        <span>{{skillset.percentage}}</span>
       </div>
       
     </div>
