--- a/src/app/component/contact/contact.component.html
+++ b/src/app/component/contact/contact.component.html
@@ -11,10 +11,8 @@
             </h2>
           </div>
           <p class="center">
-            <a class="social-link twitter" target="_blank" href="https://twitter.com/VaRanjith"></a>
-            <a class="social-link linkedin" target="_blank" href="https://www.linkedin.com/in/varanjith/"></a>
-            <a class="social-link github" target="_blank" href="https://github.com/darthranjith"></a>
-            <a class="social-link skype" target="_blank" href="skype://r4njith"></a>
+            <a class="social-link linkedin" target="_blank" href="https://www.linkedin.com/in/ranjithvaratharajan"></a>
+            <a class="social-link github" target="_blank" href="https://github.com/ranjithvaratharajan"></a>
             <a class="social-link stack-overflow" target="_blank" href="https://stackoverflow.com/users/4365228/ranjith-varadan"></a>
           </p>
           <div class="section-title center">
@@ -26,19 +24,19 @@
             <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
               <div class="fun-fact">
                 <img src="../../../assets/images/site/icon-location.svg" alt="image"/>
-                <h4>BASED IN BENGALURU, IN</h4>
+                <h4>BASED IN COIMBATORE, IN</h4>
               </div>
             </div>
             <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
               <div class="fun-fact">
                 <img src="../../../assets/images/site/icon-phone.svg" alt="image"/>
-                <h4>TEL : +91 7200004545</h4>
+                <h4>TEL : +91 9514771988</h4>
               </div>
             </div>
             <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
               <div class="fun-fact">
                 <img src="../../../assets/images/site/icon-mail.svg" alt="image"/>
-                <h4>HELLO[at]VARANJITH.COM</h4>
+                <h4>HELLO[at]RANJITHVARATHARAJAN.COM</h4>
               </div>
             </div>
             <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
