--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,7 +1,7 @@
 <section class="card-layout">
   <div class="card-intro">
     <h1>Va Ranjith</h1>
-    <p>Hello there, I am an Application Development Specialist, working for Accenture India and lives in Bengaluru.
+    <p>Hello there, I am an Application Development Specialist, working for Accenture India and lives in Coimbatore.
     </p>
     <div class="card-triggers">
       <button type="button" class="button primary">Download Cv</button>
@@ -16,7 +16,7 @@
         <h2>Va Ranjith</h2>
         <h3>Design is passion | Code is poetry </h3>
         <div class="card-desc">
-          <p>Hello there, I am an Application Development Specialist, working for Accenture India and lives in Bengaluru.
+          <p>Hello there, I am an Application Development Specialist, working for Accenture India and lives in Coimbatore.
           </p>
         </div>
       </div>
@@ -60,7 +60,7 @@
 <footer id="colophon" class="site-footer" role="contentinfo">
   <div class="site-info">
     <div class="textwidgept">
-      <p><a>© Copyright 2022 | VaRanjith R&amp;D | Made with ❤ in Angular 14.0.2</a></p>
+      <p><a>© Copyright {{currentYear}} | VaRanjith R&amp;D | Made with ❤ in Angular 16.2.7</a></p>
     </div>
   </div>
 </footer>
