Name Change Fix

--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="card-layout">
   <div class="card-intro">
-    <h1>Va Ranjith</h1>
+    <h1>Ranjith Varatharajan</h1>
     <p>Hello there, I am an Application Development Specialist, working for Accenture India and lives in Coimbatore.
     </p>
     <div class="card-triggers">
@@ -13,7 +13,7 @@
       <img class="cover-img" src="../../../assets/images/home/portrait.JPG" alt="vcard">
       <div class="cover-media"></div>
       <div class="card-info">
-        <h2>Va Ranjith</h2>
+        <h2>Ranjith Varatharajan</h2>
         <h3>Design is passion | Code is poetry </h3>
         <div class="card-desc">
           <p>Hello there, I am an Application Development Specialist, working for Accenture India and lives in Coimbatore.
