--- a/src/app/component/resume/resume.component.html
+++ b/src/app/component/resume/resume.component.html
@@ -1,4 +1,4 @@
-<article class="page">
+<article class="page hentry">
   <header class="entry-header">
     <h1 class="entry-title">resume</h1>
   </header>
