--- a/src/app/component/resume/resume.component.html
+++ b/src/app/component/resume/resume.component.html
@@ -84,7 +84,24 @@
             <i>TESTIMONIALS</i>
           </h2>
         </div>
-        <app-testimonial *ngFor="let testimonial of testimonials" [testimonial]="testimonial"></app-testimonial>
+        <ng-container *ngIf="testimonials?.length; else noTestimonials">
+          <app-testimonial *ngFor="let testimonial of getCurrentPageTestimonials()" [testimonial]="testimonial"></app-testimonial>
+          <ul class="pagination">
+            <li class="page-item" [ngClass]="{ 'disabled': currentPage === 1 }">
+              <a class="page-link" (click)="prevPage()">Previous</a>
+            </li>
+            <li class="page-item" *ngFor="let page of getPages()">
+              <a class="page-link" (click)="setPage(page)" [ngClass]="{ 'active': page === currentPage }">{{ page }}</a>
+            </li>
+            <li class="page-item" [ngClass]="{ 'disabled': currentPage === totalPages() }">
+              <a class="page-link" (click)="nextPage()">Next</a>
+            </li>
+          </ul>
+        </ng-container>
+        
+        <ng-template #noTestimonials>
+          <p>No testimonials available.</p>
+        </ng-template>
       </div>
     </div>
   </div>
