Updated to latest angular version and code refactor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<div class="no-js one-page-layout sound-effects" [ngClass]="{'is-card-loaded loaded is-card-open is-card-opened':isCardOpen||isMobile,
-     'is-ajax-page-active is-ajax-page-loaded': isSectionOpen}">
-  <router-outlet>
-  </router-outlet>
+<div
+  class="no-js one-page-layout sound-effects"
+  [ngClass]="{
+    'is-card-loaded loaded is-card-open is-card-opened': isCardOpen() || isMobile(),
+    'is-ajax-page-active is-ajax-page-loaded': isSectionOpen()
+  }"
+>
+  <router-outlet></router-outlet>
 </div>
