--- a/src/app/component/helper/progress-bar/progress-bar.component.html
+++ b/src/app/component/helper/progress-bar/progress-bar.component.html
@@ -1,9 +1,8 @@
 <div class="skill-unit">
-    <h4>{{skillset.title}}</h4>
-    <div class="bar">
-      <div class="progress" [style.width]="percentage + '%'">
-        <span>{{skillset.percentage}}</span>
-      </div>
-      
+  <h4>{{ Skillset.title }}</h4>
+  <div class="bar">
+    <div class="progress" [style.width.%]="Skillset.percentage">
+      <span>{{ Skillset.percentage }}%</span>
     </div>
   </div>
+</div>
