--- a/src/app/component/contact/contact.component.html
+++ b/src/app/component/contact/contact.component.html
@@ -1,53 +1,40 @@
 <div id="content" class="site-content" role="main">
-    <div class="page-single page-layout">
-      <article class="page hentry">
-        <header class="entry-header">
-          <h1 class="entry-title">contact</h1>
-        </header>
-        <div class="entry-content">
-          <div class="section-title center">
-            <h2>
-              <i>Let's Socialize</i>
-            </h2>
-          </div>
-          <p class="center">
-            <a class="social-link linkedin" target="_blank" href="https://www.linkedin.com/in/ranjithvaratharajan"></a>
-            <a class="social-link github" target="_blank" href="https://github.com/ranjithvaratharajan"></a>
-            <a class="social-link stack-overflow" target="_blank" href="https://stackoverflow.com/users/4365228/ranjith-varadan"></a>
-          </p>
-          <div class="section-title center">
-            <h2>
-              <i>Reach Me</i>
-            </h2>
-          </div>
-          <div class="row">
-            <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-              <div class="fun-fact">
-                <img src="../../../assets/images/site/icon-location.svg" alt="image"/>
-                <h4>BASED IN COIMBATORE, IN</h4>
-              </div>
-            </div>
-            <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-              <div class="fun-fact">
-                <img src="../../../assets/images/site/icon-phone.svg" alt="image"/>
-                <h4>TEL : +91 9514771988</h4>
-              </div>
-            </div>
-            <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-              <div class="fun-fact">
-                <img src="../../../assets/images/site/icon-mail.svg" alt="image"/>
-                <h4>HELLO[at]RANJITHVARATHARAJAN.COM</h4>
-              </div>
-            </div>
-            <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-              <div class="fun-fact">
-                <img src="../../../assets/images/site/icon-check.svg" alt="image"/>
-                <h4>FREELANCE AVAILABLE</h4>
-              </div>
-            </div>
-          </div>
+  <div class="page-single page-layout">
+    <article class="page hentry">
+      <header class="entry-header">
+        <h1 class="entry-title">Contact</h1>
+      </header>
+      <div class="entry-content">
+        <div class="section-title center">
+          <h2><i>Let's Socialize</i></h2>
         </div>
-      </article>
-    </div>
+        <p class="center">
+          @for (link of socialLinks; track link.url) {
+            <a
+              class="social-link {{ link.class }}"
+              target="_blank"
+              [href]="link.url"
+              [attr.aria-label]="link.platform"
+            ></a>
+          }
+        </p>
+        <div class="section-title center">
+          <h2><i>Reach Me</i></h2>
+        </div>
+        <div class="row">
+          @for (info of contactInfo; track info.text) {
+            <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+              <div class="fun-fact">
+                <img
+                  src="../../../assets/images/site/{{ info.icon }}"
+                  [attr.alt]="info.text"
+                />
+                <h4>{{ info.text }}</h4>
+              </div>
+            </div>
+          }
+        </div>
+      </div>
+    </article>
   </div>
-  
+</div>
