--- a/src/app/component/helper/event/event.component.html
+++ b/src/app/component/helper/event/event.component.html
@@ -1,6 +1,6 @@
 <div class="event">
-    <h3>{{event?.startYear}} - {{event?.endYear}}</h3>
-    <h4>{{event?.Title}}</h4>
-    <h5>{{event?.Name}}</h5>
-    <p>{{event?.percentage}} ({{event?.class}})</p>
-  </div>
+  <h3>{{ Event.startYear }} - {{ Event.endYear }}</h3>
+  <h4>{{ Event.Title }}</h4>
+  <h5>{{ Event.Name }}</h5>
+  <p>{{ Event.percentage }} ({{ Event.class }})</p>
+</div>
