Added too much files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,5 @@
     'is-ajax-page-active is-ajax-page-loaded': isSectionOpen()
   }"
 >
-  <router-outlet></router-outlet>
+  <router-outlet name="primary"></router-outlet>
 </div>
