--- a/src/app/component/contact/contact.component.html
+++ b/src/app/component/contact/contact.component.html
@@ -5,35 +5,43 @@
         <h1 class="entry-title">Contact</h1>
       </header>
       <div class="entry-content">
-        <div class="section-title center">
-          <h2><i>Let's Socialize</i></h2>
-        </div>
-        <p class="center">
-          @for (link of socialLinks; track link.url) {
-            <a
-              class="social-link {{ link.class }}"
-              target="_blank"
-              [href]="link.url"
-              [attr.aria-label]="link.platform"
-            ></a>
-          }
-        </p>
-        <div class="section-title center">
-          <h2><i>Reach Me</i></h2>
-        </div>
-        <div class="row">
-          @for (info of contactInfo; track info.text) {
-            <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-              <div class="fun-fact">
-                <img
-                  src="../../../assets/images/site/{{ info.icon }}"
-                  [attr.alt]="info.text"
-                />
-                <h4>{{ info.text }}</h4>
-              </div>
+        @defer (when !loading()) {
+          @if (!error()) {
+            <div class="section-title center">
+              <h2><i>Let's Socialize</i></h2>
             </div>
+            <p class="center">
+              @for (link of socialLinks(); track link.id) {
+                <a
+                  class="social-link {{ link.class }}"
+                  target="_blank"
+                  [href]="link.url"
+                  [attr.aria-label]="link.platform"
+                ></a>
+              }
+            </p>
+            <div class="section-title center">
+              <h2><i>Reach Me</i></h2>
+            </div>
+            <div class="row">
+              @for (info of contactInfo(); track info.id) {
+                <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+                  <div class="fun-fact">
+                    <img
+                      src="../../../assets/images/site/{{ info.icon }}"
+                      [attr.alt]="info.text"
+                    />
+                    <h4>{{ info.text }}</h4>
+                  </div>
+                </div>
+              }
+            </div>
+          } @else {
+            <p class="text-danger">{{ error() }}</p>
           }
-        </div>
+        } @placeholder {
+          <p>Loading contact information...</p>
+        }
       </div>
     </article>
   </div>
