--- a/src/app/component/helper/testimonial/testimonial.component.html
+++ b/src/app/component/helper/testimonial/testimonial.component.html
@@ -1,5 +1,5 @@
 <div class="testo">
-  <img [src]="testimonial.image" [alt]="testimonial.name">
+  <img [src]="baseUrl+testimonial.image" [alt]="testimonial.name">
   <h4>{{ testimonial.name }}</h4>
   <h5>{{ testimonial.position }}</h5>
   <p>{{ testimonial.comments }}</p>
