--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,45 +1,69 @@
 <section class="card-layout">
   <div class="card-intro">
-    <h1>Va Ranjith</h1>
-    <p>Hello there, I am an Application Development Specialist, working for Accenture India and lives in Coimbatore.</p>
+    @if (profile()) {
+      <h1>{{ profile()?.name }}</h1>
+      <p>{{ profile()?.description }}</p>
+    } @else {
+      <h1>Loading...</h1>
+      <p>Loading description...</p>
+    }
     <div class="card-triggers">
-      <button type="button" class="button primary">Download Cv</button>
+      <button type="button" class="button primary" (click)="downloadCv()" [disabled]="!profile()?.cv_file_url">
+        Download CV
+      </button>
       <button (click)="openCard()" class="button secondary">Discover</button>
     </div>
   </div>
   <div id="card" class="card">
     <div class="cover" (click)="!isCardOpen() && openCard()">
-      <img class="cover-img" src="../../../assets/images/home/portrait.JPG" alt="vcard">
-      <div class="cover-media"></div>
+      <img
+        class="cover-img"
+        [src]="profile()?.profile_image_url"
+        alt="vcard"
+      />
+      <div class="cover-media" [style.backgroundImage]="'url(' + profile()?.profile_image_url + ')'"></div>
       <div class="card-info">
-        <h2>Va Ranjith</h2>
-        <h3>Design is passion | Code is poetry</h3>
-        <div class="card-desc">
-          <p>Hello there, I am an Application Development Specialist, working for Accenture India and lives in Coimbatore.</p>
-        </div>
+        @if (profile()) {
+          <h2>{{ profile()?.name }}</h2>
+          <h3>{{ profile()?.tagline }}</h3>
+          <div class="card-desc">
+            <p>{{ profile()?.description }}</p>
+          </div>
+        } @else {
+          <h2>Loading...</h2>
+          <h3>Loading tagline...</h3>
+          <div class="card-desc">
+            <p>Loading description...</p>
+          </div>
+        }
       </div>
       <nav class="card-nav">
         <ul>
-        @for (link of navLinks; track link.path) {
-          <li>
-            <a
-              [routerLink]="link.path"
-              routerLinkActive="current_page_item"
-              (click)="openSection()"
-            >
-              <i [class]="link.icon"></i>{{ link.label }}
-            </a>
-          </li>
-        }
+          @for (link of navLinks(); track link.path) {
+            <li>
+              <a
+                [routerLink]="link.path"
+                routerLinkActive="current_page_item"
+                (click)="openSection()"
+              >
+                <i [class]="link.icon"></i>{{ link.label }}
+              </a>
+            </li>
+          }
         </ul>
       </nav>
       <div class="cover-link"></div>
     </div>
-    <div class="card-3d-right-side"></div>
-    <div class="card-3d-bottom-side"></div>
-    <div class="card-content is-loaded">
+    <div
+      class="card-3d-right-side"
+      [style.backgroundImage]="'url(' + profile()?.profile_image_url + ')'"
+    ></div>
+    <div
+      class="card-3d-bottom-side"
+      [style.backgroundImage]="'url(' + profile()?.profile_image_url + ')'"
+    ></div>
+    <div class="card-content" appLoading>
       <router-outlet></router-outlet>
-      <ng-container #sectionContainer></ng-container>
     </div>
   </div>
   <a
@@ -60,7 +84,7 @@
 <footer id="colophon" class="site-footer" role="contentinfo">
   <div class="site-info">
     <div class="textwidgept">
-      <p><a>© Copyright {{ currentYear() }} | VaRanjith R&D | Made with ❤ in Angular 20</a></p>
+      <p><a>© Copyright {{ currentYear() }} | {{ profile()?.name || 'Loading...' }} R&D | Made with ❤ in Angular 20</a></p>
     </div>
   </div>
 </footer>
