--- a/src/app/component/resume/resume.component.html
+++ b/src/app/component/resume/resume.component.html
@@ -1,88 +1,47 @@
-<article class="page hentry">
-  <header class="entry-header">
-    <h1 class="entry-title">Resume</h1>
-  </header>
-  <div class="entry-content">
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="event">
-          <h2>Work History</h2>
-          <p><i class="pw-icon-briefcase"></i></p>
-        </div>
-        <div class="event">
-          <h3>Feb 2022 - Present</h3>
-          <h4>Application Development Specialist</h4>
-          <h5>Accenture India</h5>
-          <p>I am full-stack developer working with ASP.NET Web Forms, MVC, Angular, C# and SQL Server. I am currently a front-end software engineer of a small but dedicated team in our Engineering Solutions Team. This team is responsible for troubleshooting client issues and providing fixes in a quick turn around. We work directly with our Client Support and Services department to ensure prompt delivery of fixes as well as to keep up to date on client escalations.</p>
-        </div>
-        <div class="event">
-          <h3>Apr 2021 - Feb 2022</h3>
-          <h4>Technical Lead</h4>
-          <h5>L&T Technology Services</h5>
-          <p>I am full-stack developer working with ASP.NET Web Forms, MVC, Angular, C# and SQL Server. I am currently a front-end software engineer of a small but dedicated team in our Engineering Solutions Team. This team is responsible for troubleshooting client issues and providing fixes in a quick turn around. We work directly with our Client Support and Services department to ensure prompt delivery of fixes as well as to keep up to date on client escalations.</p>
-        </div>
-        <div class="event">
-          <h3>Sep 2018 - Apr 2021</h3>
-          <h4>Senior Software Engineer</h4>
-          <h5>L&T Technology Services</h5>
-          <p>We work directly with our Client Support and Services department to ensure prompt delivery of fixes as well as to keep up to date on client escalations.</p>
-        </div>
-        <div class="event">
-          <h3>Oct 2017 - Sep 2018</h3>
-          <h4>Software Engineer</h4>
-          <h5>Saggezza India Pvt. Ltd.</h5>
-          <p>Made changes and fixes to an existing ecommerce application. Started on large scale web/data mining project. Maintained a high level of quality. Worked on large projects while maintaining deadline and high quality. Used SSIS/SSRS to create reports for the application.</p>
-        </div>
-        <div class="event">
-          <h3>Oct 2016 - Oct 2017</h3>
-          <h4>Software Engineer</h4>
-          <h5>Cogwave Software Technologies</h5>
-          <p>Created frontend web applications to reduce redundant or inefficient procedures and processes. Maintained a high level of quality. Worked on large projects while maintaining deadline and high quality. Worked on back-end hotel/room reservation processes for normal workflows. Worked directly with clients to document and program custom hotel/room policies. Traveled to client sites to train clients on using solutions. Worked directly with clients to analyze and troubleshoot payment issues in a client support role.</p>
-        </div>
-        <div class="event">
-          <h3>Nov 2014 - Oct 2016</h3>
-          <h4>Software Developer</h4>
-          <h5>Sivas Enterprises</h5>
-          <p>Maintained a high level of quality. Worked on large projects while maintaining deadlines and high quality.</p>
-        </div>
-        <div class="event">
-          <h2>Education</h2>
-          <p><i class="pw-icon-education"></i></p>
-        </div>
-        @for (eduEvent of eduEvents(); track eduEvent.Title) {
-          <app-event [Event]="eduEvent"></app-event>
-        }
-        <p><button type="button" class="button primary" (click)="downloadCv()">Download Resume</button></p>
-      </div>
-      <div class="col-sm-6">
-        <div class="section-title center">
-          <h2><i>Coding Skills</i></h2>
-        </div>
-        @for (skill of skills(); track skill.title) {
-          <app-progress-bar [Skillset]="skill"></app-progress-bar>
-        }
-        <div class="section-title center">
-          <h2><i>Testimonials</i></h2>
-        </div>
-        @if (currentPageTestimonials().length > 0) {
-          @for (testimonial of currentPageTestimonials(); track testimonial.name) {
-            <app-testimonial [testimonial]="testimonial"></app-testimonial>
-          }
-          <ul class="pagination">
-            <li class="page-item" [ngClass]="{'disabled': currentPage() === 1}">
-              <a class="page-link" (click)="prevPage()">Previous</a>
-            </li>
-            @for (page of getPages(); track page) {
-              <li class="page-item" [ngClass]="{'active': page === currentPage()}">
-                <a class="page-link" (click)="setPage(page)">{{ page }}</a>
-              </li>
+  @defer (when !loading.isLoading()) {
+    <article class="page hentry">
+      <header class="entry-header">
+        <h1 class="entry-title">Resume</h1>
+      </header>
+      <div class="entry-content">
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="event">
+              <h2>Work History</h2>
+              <p><i class="pw-icon-briefcase"></i></p>
+            </div>
+            @for (job of workHistory(); track job.id) {
+              <div class="event">
+                <h3>{{ job.startDate }} - {{ job.endDate }}</h3>
+                <h4>{{ job.title }}</h4>
+                <h5>{{ job.company }}</h5>
+                <p class="job-description">{{ job.description }}</p>
+              </div>
             }
-            <li class="page-item" [ngClass]="{'disabled': currentPage() === totalPages()}">
-              <a class="page-link" (click)="nextPage()">Next</a>
-            </li>
-          </ul>
-        }
+            <div class="event">
+              <h2>Education</h2>
+              <p><i class="pw-icon-education"></i></p>
+            </div>
+            @for (eduEvent of eduEvents(); track eduEvent.id) {
+              <app-event [Event]="eduEvent"></app-event>
+            }
+            <p><button type="button" class="button primary" (click)="downloadCv()">Download Resume</button></p>
+          </div>
+          <div class="col-sm-6">
+            <div class="section-title center">
+              <h2><i>Coding Skills</i></h2>
+            </div>
+            @for (skill of skills(); track skill.id) {
+              <app-progress-bar [Skillset]="skill"></app-progress-bar>
+            }
+            <div class="section-title center">
+              <h2><i>Testimonials</i></h2>
+            </div>
+              @for (testimonial of testimonials(); track testimonial.id) {
+                <app-testimonial [testimonial]="testimonial"></app-testimonial>
+              }
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</article>
+    </article>
+  }
