--- a/src/app/component/helper/testimonial/testimonial.component.html
+++ b/src/app/component/helper/testimonial/testimonial.component.html
@@ -2,5 +2,5 @@
   <img [src]="baseUrl+testimonial.image" [alt]="testimonial.name">
   <h4>{{ testimonial.name }}</h4>
   <h5>{{ testimonial.position }}</h5>
-  <p>{{ testimonial.comments }}</p>
+  <p class="testo-desc">{{ testimonial.comments }}</p>
 </div>
